--- a/Slak/12.md
+++ b/Slak/12.md
@@ -3,17 +3,19 @@
 
 ## Aelian 
 
+Claudius Aelianus (Greek: Κλαύδιος Αἰλιανός; c. 175 – c. 235 AD), commonly Aelian, born at Praeneste, was a Roman author and teacher of rhetoric who flourished under Septimius Severus and probably outlived Elagabalus, who died in 222. He spoke Greek so fluently that he was called "honey tongued" (μελίγλωσσος meliglossos); Roman-born, he preferred Greek authors, and wrote in a slightly archaizing Greek himself.
+
 ### On the Nature of Animals.
 
 From mystic and theurgic compositions we return to works of the declining Roman Empire which deal more directly with nature but, it must be confessed, in a manner somewhat fantastic. About the beginning of the third century, Aelian of Praeneste, who is included by Philostratus in his _Lives of the Sophists_, wrote _On the Nature of Animals_ [^322:1] 
 
- [^322:1]: Περί ζώων ιδιότητος - Perí zóon idiótitos.  I have used both the editio princcps by Gesner, Zurich, 1556, and the critical edition by R. Hercher, Paris, 1858, and Teubner, 1864. The work will henceforth be cited without title in the notes.
+ [^322:1]: Περί ζώων ιδιότητος - Perí zóon idiótitos.  I have used both the editio princeps by Gesner, Zurich, 1556, and the critical edition by R.Hercher, Paris, 1858, and Teubner, 1864. The work will henceforth be cited without title in the notes.
 
 Its seventeen books, written in Greek, which Aelian used fluently despite his Latin birth, are believed to have reached us partly in interpolated form through two families of manuscripts, of which the older and less interpolated text is found in a thirteenth century manuscript at Paris and a somewhat earlier Vatican codex. [^322:2] 
 
  [^322:2]: See PW, and Christ, Gesch. d. griech. Litt., for further details.
 
-A number of its chapters are similar to and perhaps borrowed from Pliny's Natural History; at any rate they are commonplaces of ancient science; but the work also has a marked individuality. Parallels have also been noted between this work and the later Hexaemeron of the church father Basil. Aelian was much cited in Byzantine literature and learning, and if he was not directly used in the Latin west, at least the attitude toward animals which he displays and his selection of material concerning them are as apt precursors of medieval Latin as of medieval Greek scientific literature. 
+A number of its chapters are similar to and perhaps borrowed from Pliny's _Natural History_; at any rate they are commonplaces of ancient science; but the work also has a marked individuality. Parallels have also been noted between this work and the later Hexaemeron of the church father Basil. Aelian was much cited in Byzantine literature and learning, and if he was not directly used in the Latin west, at least the attitude toward animals which he displays and his selection of material concerning them are as apt precursors of medieval Latin as of medieval Greek scientific literature. 
 
 ### General character of the work.
 
@@ -155,9 +157,13 @@ There are scattered mentions of the marvels of India throughout Aelian' s work, 
 
 ## Solinus
 
+Gaius Julius Solinus, Latin grammarian and compiler, probably flourished in the early 3rd century AD. Historical scholar Theodor Mommsen dates him to the middle of the 3rd century.
+
+He was the author of De mirabilibus mundi (_The wonders of the world_) which circulated both under the title Collectanea rerum memorabilium (_Collection of Curiosities_), and Polyhistor; but the latter title was favoured by the author. The work is indeed a description of curiosities in a chorographical framework. Adventus, to whom it is dedicated, is identified with Oclatinius Adventus, consul 218. It contains a short description of the ancient world, with remarks on historical, social, religious and natural history questions. The greater part is taken from Pliny's _Natural History_ and the geography of Pomponius Mela. 
+
 ### Solinus in the middle ages
 
-A well-known work in the middle ages dating from the period of the Roman Empire was the _Collectanea rerum memorabilium_ of Polyhistor of Solinus. Mommsen's edition lists 153 manuscripts from 32 places, [^326:7] and we shall find many citations of Solinus in our later medieval authors. 
+A well known work in the middle ages dating from the period of the Roman Empire was the _Collectanea rerum memorabilium_ of Polyhistor of Solinus. Mommsen's edition lists 153 manuscripts from 32 places, [^326:7] and we shall find many citations of Solinus in our later medieval authors. 
 
  [^326:7]: C. _lulii Solini Collectanea rerum memorabilium iterum recensuit_ Th. Mommsen, Berlin, 1895,  pp. xxxi-li. Beazley, _Dawn of Modern Geography_, I, 520-2, lists 152 MSS.
 
@@ -253,6 +259,12 @@ Alexander the Great figures prominently in the pages of Solinus, being mentioned
  [^331:2]: Mommsen (1905), p. 66.
  
  ## Horapollo
+ 
+ Horapollo is mentioned by the Suda (ω 159) as one of the last leaders of Egyptian priesthood at a school in Menouthis, near Alexandria, during the reign of Zeno (AD 474–491).
+
+According to the Suda, Horapollo had to flee because he was accused of plotting a revolt against the Christians, and his temple to Isis and Osiris was destroyed. Horapollo was later captured and after torture converted to Christianity. Another, earlier, Horapollo alluded to by the Suda was a grammarian from Phanebytis, under Theodosius II (AD 408–450). To this Horapollo the Hieroglyphica was attributed by most 16th-century editors, although there were more occult opinions, identifying Horapollo with Horus himself, or with a pharaoh.
+
+Horapollo wrote commentaries on Sophocles, Alcaeus of Mytilene and Homer, and a work (Ancient Greek: Τεμενικά) on places consecrated to the gods. Photius (cod. 279), who calls him a dramatist as well as a grammarian, ascribes to him a history of the foundation and antiquities of Alexandria (unless this is by an Egyptian of the same name, who lived in the reign of Zeno, 474-491)
 
 ### The _Hieroglyphics_ of Horapollo.
 
@@ -262,7 +274,7 @@ In seeking a third text and author of the same type as Aelian and Solinus to rou
 
 but his work is extant only in the Greek translation of it made by a Philip who lived a century or two later and who seems to have made some additions of his own. [^331:4] 
 
- [^331:4]: ''I have used the text and Eng lish translation of A. T. Cory, The _Hieroglyphics_ of Horapollo Nilous, 1840. Philip's Greek is so bad that some would date it in the fourteenth or fifteenth century. The oldest extant Greek codex was purchased in Andros in 1419. The work was translated into Latin by the fifteenth century at latest; see Vienna 3255, 15th century, 82 fols., Horapollo, Hlieroglyphicon latine versorum liber I et libri II introductio cum figuris calamo exaratis et coloratis.
+ [^331:4]: I have used the text and English translation of A.T.Cory, The _Hieroglyphics_ of Horapollo Nilous, 1840. Philip's Greek is so bad that some would date it in the fourteenth or fifteenth century. The oldest extant Greek codex was purchased in Andros in 1419. The work was translated into Latin by the fifteenth century at latest; see Vienna 3255, 15th century, 82 fols., Horapollo, Hlieroglyphicon latine versorum liber I et libri II introductio cum figuris calamo exaratis et coloratis.
 
 ### Marvels of animals.
 
