--- a/Slak/11.md
+++ b/Slak/11.md
@@ -12,6 +12,8 @@ If the Neo-Platonists were like our mediums, what were the Christian exorcists l
 
 ## Plotinus
 
+Plotinus (Greek: Πλωτῖνος, Plōtinos; c. 204/5 – 270) was a major Greek-speaking philosopher of the ancient world. In his philosophy, described in the _Enneads_, there are three principles: the One, the Intellect, and the Soul. His teacher was Ammonius Saccas, who was of the Platonic tradition. Historians of the 19th century invented the term Neoplatonism and applied it to Plotinus and his philosophy, which was influential in Late Antiquity. Much of the biographical information about Plotinus comes from Porphyry's preface to his edition of Plotinus' _Enneads_. His metaphysical writings have inspired centuries of Pagan, Islamic, Jewish, Christian, and Gnostic metaphysicians and mystics.
+
  ### Plotinus on magic.
 
 Plotinus [^299:1] who lived from about 204 to 270 A. D. and is generally regarded as the founder of Neo-Platonism, 
@@ -34,7 +36,7 @@ Even he, however, accepted incantations and the charms of sorcerers and magician
 
  [^300:1]: Ennead, IV, 4, 40 CII, 805 or 434). Τὰς δὲ γοητείας πῶς; ἢἣ τῇ σνυμπαθείᾳ, καὶ τῷ πεφυκέναι συμφωνίαν εἶναι ὁμοίων καὶἐναντίωσιν ἀνομοίων, καί τῇ τῶν δυνάμεων τῶν πολλῶν ποικιλίᾳ εἰς ἂν ἕῳον συντελούντων. 114. 42 (ΤΙ, 808 or 436). . . καὶ τέχναις καὶ ἰατρὼν καὶ ἐπαοιδῶν ἄλλο ἄλλῳ ἠναγκάσθη παρασχεῖν τι τῆς δυνάμεως τῆς αὑτοῦ. Ennead, IV, 9 CII, 891 or 479). εἰ δὲ καὶ ἐπωδαὶ καὶ ὅλως μαγεῖαι συνάγουσι καὶ συμπαθεῖς πόῤῥωθεν ποιοῦσι, πάντως τοι διὰ Κζνχῆς μιᾶς.
 
- ### The _Life_ of reason is alone free from magic.
+ ### The Life of reason is alone free from magic.
  
 Plotinus held further, however, that only the physical and irrational side of man's nature was affected by drugs and sorcery, just as 
 
@@ -67,7 +69,7 @@ Incidentally the episode provides one more proof of the essential unity of astro
 
  [^300:7]: Vita, cap. 10.
 
- ### Invoking the demon of Plotinus .
+ ### Invoking the demon of Plotinus
  
 Plotinus, indeed, was regarded by his admirers as divinely inspired, as another incident from the _Life_ by Porphyry will illustrate. [^301:1] 
 An Egyptian priest had little difficulty in persuading Plotinus, who although of Roman parentage had been born in Egypt, to allow him to try to invoke his familiar demon. Plotinus was then teaching in Rome where he resided for twenty-six years, and the temple of Isis was the only pure place in the city which the priest could find for the ceremony.  
@@ -77,7 +79,7 @@ When the invocation had been duly performed, there appeared not a mere demon but
 
 ### Rite of strangling birds.
  
-This practice of grasping birds by the necks in both The rite of hands is shown by a number of works of art to have been a birds. custom of great antiquity. We may see a winged Gorgon strangling a goose in either hand upon a plate of the seventh century B.C. from Rhodes now in the British Museum. [^301:2] 
+This practice of grasping birds by the necks in both The rite of hands is shown by a number of works of art to have been a custom of great antiquity. We may see a winged Gorgon strangling a goose in either hand upon a plate of the seventh century B.C. from Rhodes now in the British Museum. [^301:2] 
 
  [^301:2]: A748.
 
@@ -127,7 +129,7 @@ while in the twelfth century John of Salisbury, arguing against astrology, fears
 
  [^303:1]: _Polycraticus_, II, 19, (ed. C.C.I.Webb, 1909, I, 112). Mr. Webb (I, xxviii) holds that John of Salisbury “certainly did not have Plotinus", and derived some passages from his works through Macrobius and Augustine; but he is unable to state in what intermediate source John could have found the passage now in question. It does not seem to reflect Plotinus’ doctrine very accurately.
 
-### The divine star-souls.
+### The divine star souls.
 
 But let us see what Plotinus says himself rather than what others took to be his meaning. Like Plato, who regarded the stars as happy, divine, and eternal animals, Plotinus not only believes that the stars have souls but that their intellectual processes are far above the frailties of the human mind and nearer the omniscience of the world-soul. Memory, for example, is of no use to them, [^303:2] 
 
@@ -216,9 +218,13 @@ Thus he reinforced the conception of occult virtue, always one of the chief pill
 
 ## Porphyry
 
-### Porphyry's _Letter to Anebo_.
+Porphyry of Tyre (Greek: Πορφύριος, Porphýrios; Arabic: فرفوريوس, Furfūriyūs; c.234 – c.305 AD) was a Neoplatonic philosopher who was born in Tyre, in the Roman Empire. He edited and published the _Enneads_, the only collection of the work of his teacher Plotinus. His commentary on Euclid's _Elements_ was used as a source by Pappus of Alexandria.
 
-Although Plotinus denied that diseases were due to demons, we once heard him speak of "demonic nature," and one of the _Enneads_ discusses _Each man's own demon_. Here, however, the discussion is limited to the power presiding in each human soul, and nothing is said of magic. For the connection of demons with magic and for the art of theurgy we must turn to the writings of Porphyry and lamblichus, and especially to _The Letter to Aneho_ of Porphyry, who lived from about 233 to 305, and the reply thereto of the master Abammon, a work which is otherwise known as _Liber  De mysteriis_ [^307:1] 
+He also wrote many works himself on a wide variety of topics. His _Isagoge_, or Introduction, is an introduction to logic and philosophy, and in the Latin and Arabic translations it was the standard textbook on logic throughout the Middle Ages. In addition, through several of his works, most notably _Philosophy from Oracles_ and _Against the Christians_, which was banned by emperor Constantine the Great, he was involved in a controversy with a number of early Christians.
+
+### Porphyry's Letter to Anebo.
+
+Although Plotinus denied that diseases were due to demons, we once heard him speak of "demonic nature," and one of the _Enneads_ discusses _Each man's own demon_. Here, however, the discussion is limited to the power presiding in each human soul, and nothing is said of magic. For the connection of demons with magic and for the art of theurgy we must turn to the writings of Porphyry and lamblichus, and especially to _The Letter to Aneho_ of Porphyry, who lived from about 233 to 305, and the reply thereto of the master Abammon, a work which is otherwise known as _Liber De mysteriis_ [^307:1] 
 
  [^307:1]: Edited Venice, Aldine Press, 1497 and 15 16; Oxford, 1678; by G.Partliey, Berlin, 1857. In the following quotations from it Ihave usually adhered to T. Taylor's English translation, London, 1821.
 
@@ -350,7 +356,7 @@ Christian writers drew a like distinction between prophecy or miracle and divina
 
  [^312:3]: II, 10.
 
-### Magic's abuse of nature's forces.
+### Magic abuse of nature forces.
 
 Another distinction is that theurgy aims at communion with the gods while magic has to do rather with "the physical or corporeal powers of the universe." [^312:4] 
 
@@ -398,7 +404,7 @@ How is divination to be placed in reference to magic and  theurgy? Porphyry had 
 
  [^314:1]: De abstinentia, II, 48. 
 
-### lamblichus on divination.
+### Iamblichus on divination.
 
 Porphyry states that all diviners attribute their predictions to gods or demons, but that he wonders if foreknowledge may not be a power of the human soul or perhaps accountable for by the sympathy which exists between different parts of the universe. lamblichus holds, however, that divination is neither a human art nor the work of nature but of divine origin. [^314:2] 
 
@@ -504,9 +510,11 @@ Besides showing that Porphyry was inconsistent in distinguishing the different v
 
 ## Julian
 
+Julian (Latin: Flavius Claudius Iulianus Augustus; Greek: Φλάβιος Κλαύδιος Ἰουλιανὸς Αὔγουστος; 331/332 – 26 June 363), also known as Julian the Apostate, was Roman Emperor from 361 to 363, as well as a notable philosopher and author in Greek.
+
 ### The emperor Julian on theurgy and astrology.
 
-The Emperor Julian was an enthusiastic follower of lamblichus whom he praises [^317:3] in his Hymn to the Sovereign Sun delivered at the Saturnalia of 361 A. D. 
+The Emperor Julian was an enthusiastic follower of Iamblichus whom he praises [^317:3] in his _Hymn to the Sovereign Sun_ delivered at the Saturnalia of 361 A. D. 
 
  [^317:3]: Loeb Library edition Julian's works, I, 398, 412, 433. 
 
@@ -564,7 +572,7 @@ In another passage [^319:1] he indicates the widespread trust in astrology among
 > "who deny that there are superior powers in the sky," 
 
 
-nevertheless think it imprudent to appear in public or dine or bathe without having first consulted an almanac as to the whereabouts of Mercury or the exact position of the moon in Cancer, The passage is satirical, no doubt, but Ammianus probably objects quite as much to their disbelief in superior powers in the sky as he does to the excess of their superstition. That astrology and divination may be studied scientifically he again indicates in a description of learning at Alexandria. Besides praising the medical training to be had there, and mentioning the study of geometry, music, astronomy, and arithmetic, he says, 
+nevertheless think it imprudent to appear in public or dine or bathe without having first consulted an almanac as to the whereabouts of Mercury or the exact position of the moon in Cancer. The passage is satirical, no doubt, but Ammianus probably objects quite as much to their disbelief in superior powers in the sky as he does to the excess of their superstition. That astrology and divination may be studied scientifically he again indicates in a description of learning at Alexandria. Besides praising the medical training to be had there, and mentioning the study of geometry, music, astronomy, and arithmetic, he says, 
 
 > "In addition to these subjects they cultivate the science which reveals the ways of the fates." [^319:2] 
 
@@ -572,7 +580,7 @@ nevertheless think it imprudent to appear in public or dine or bathe without hav
 
 ### Proclus on theurgy
 
-lamblichus's account of theurgy is repeated in more condensed form by Proclus (412-485) in a brief treatise or fragment which is extant only in its Latin translation by the Florentine humanist Ficinus, entitled _De sacrificio et magia_. [^319:3]
+Iamblichus's account of theurgy is repeated in more condensed form by Proclus (412-485) in a brief treatise or fragment which is extant only in its Latin translation by the Florentine humanist Ficinus, entitled _De sacrificio et magia_. [^319:3]
 
  [^319:3]: Published at Venice (Aldine), 1497, along with the _De mysteriis_, and other works edited or composed by Marsilius Ficinus. See also Prodi Opera, ed. Cousin, Paris, 1820-1827, III, 278; and Kroll, _Analecta Graeca_, Greisswald, 1901, where a Greek translation accompanies the Latin text. 
 
@@ -592,7 +600,7 @@ Augustine in The City of God [^320:2] accepted Pophyry as an authority on the su
 
 ### Neo-Platonists and alchemy.
 
-The Neo-Platonists showed some interest in alchemy as well as in theurgy and astrology. Berthelot published in his Collection des Alchimistes Grecs "a little tract of positive chemistry" which is extant under the name of lamblichus; and Proclus treated of the relations between the metals and planets and the generation of the metals under the influence of the stars. [^321:1]  
+The Neo-Platonists showed some interest in alchemy as well as in theurgy and astrology. Berthelot published in his Collection des Alchimistes Grecs "a little tract of positive chemistry" which is extant under the name of Iamblichus; and Proclus treated of the relations between the metals and planets and the generation of the metals under the influence of the stars. [^321:1]  
 Of Synesius, who was both a Neo-Platonist and a Christian bishop, and who seems to have written works of alchemy, we shall treat in a later chapter. 
 
  [^321:1]: Berthelot (1889), p. ix.
