--- a/Slak/10.md
+++ b/Slak/10.md
@@ -13,7 +13,10 @@ Assuming as these writings do to disclose the secrets of ancient priesthoods and
 
  [^288:1]: Besides the works to be cited later in this chapter, the reader may consult: A. Dieterich, Abraxas (Studien z. relig. gesch. d. spa&auml;.), Leipzig, 1891, especially chapter II (pp. 136ff.), "J&uuml;disch-orphisch-gnostiche Kulte und die Zauberb&uuml;cher" ; and G.A.Lobeck, Aglaophanms, 1829, 2 vols. 
  
- ## Hermes
+## Hermes
+ 
+Hermes Trismegistus (Ancient Greek: Ἑρμῆς ὁ Τρισμέγιστος, "thrice-greatest Hermes"; Latin: Mercurius ter Maximus) is the purported author of the Hermetic Corpus, a series of sacred texts that are the basis of Hermeticism.   
+Hermes Trismegistus may be associated with the Greek god Hermes and the Egyptian god Thoth. Greeks in the Ptolemaic Kingdom of Egypt recognized the equivalence of Hermes and Thoth through the interpretatio graeca. Consequently, the two gods were worshiped as one, in what had been the Temple of Thoth in Khemenu, which was known in the Hellenistic period as Hermopolis.
 
 ### The Hermetic books.
 
@@ -59,9 +62,9 @@ and explains that "our ancestors . , . inscribed all their own writings with the
 
 [^289:4]: I, 1.
 
-### _Poimandres_ and the _Hermetic _Corpus__.
+### Poimandres and the Hermetic Corpus
 
-There has come down to us under the name of Hermes a collection of seventeen or eighteen fragments which is generally known as the _Hermetic _Corpus__. Of the fragments the first and chief is entitled _Poimandres_ {HoLnavbp-qs), a name which is sometimes apphed to the entire _Corpus_. Another fragment entitled Asclepius, since it is in the form of a dialogue between him and "Mercurius Trismegistus," exists in a Latin form which has been ascribed probably incorrectly to Apuleius of Madaura as translator (_Asclepius . . . Mercurii trismegisti dialogus Lucio Apuleio Madau- rensi philosopho Platonico interprete_) . None of the Greek manuscripts of the _Corpus_ seems older than the fourteenth century, although Reitzenstein thinks that they may all be derived from the version which Michael Psellus had before him in the eleventh century. [^290:1] 
+There has come down to us under the name of Hermes a collection of seventeen or eighteen fragments which is generally known as the _Hermetic Corpus_. Of the fragments the first and chief is entitled _Poimandres_ (Ποιμάνδρης), a name which is sometimes applied to the entire _Corpus_. Another fragment entitled Asclepius, since it is in the form of a dialogue between him and "Mercurius Trismegistus," exists in a Latin form which has been ascribed probably incorrectly to Apuleius of Madaura as translator (_Asclepius . . . Mercurii trismegisti dialogus Lucio Apuleio Madaurensis philosopho Platonico interprete_) . None of the Greek manuscripts of the _Corpus_ seems older than the fourteenth century, although Reitzenstein thinks that they may all be derived from the version which Michael Psellus had before him in the eleventh century. [^290:1] 
 
 [^290:1]: R.Reitzenstein, Poimatuires, Leipzig, 1904, p. 319. This work is the fullest scientific treatment of the subject.
 
@@ -89,7 +92,6 @@ one on the names and powers of the twelve signs, one on astrological medicine ad
 
  [^291:4]: An English translation by John Harvey was printed in London, 1657, i2mo. It also exists in manuscript form in the British Museum ; Sloane 1734, fols. 283- 98, "The learned work of Hermes Trismegistus intituled hys Phisicke Mathematycke or Mathematicall Physickes, direct to Hammon Kinge of Egypte." 
 
-
 one on thunder and lightning, and some hexameters on the relation of earth- quakes to the signs of the zodiac. This last is also ascribed to Orpheus. [^291:5] 
 
  [^291:5]: _Orphica_, ed. Abel (1885), p. 141. 
@@ -109,6 +111,10 @@ Some treatises are preserved only in Arabic; others are medieval Latin fabricati
 [^292:2]: Berthelot (1885), p. 134. 
  
  ### Nechepso and Petosiris
+ 
+"Petosiris to Nechepso is a letter describing an ancient divination technique using numerology and a diagram. It is likely to be a pseudepigraph. Petosiris and Nechepso are considered to be the founders of astrology in some traditions. One translation of this letter into Latin is attributed to Saint Bede, and can be found in Cotton Tiberius. The technique is known by several names, including the Petosiris Circle, the Sphere of Apuleius, Columcille's Circle, and Democritus's Sphere. The attribution of ancient authors is a typical practice of Neoplatonism and Gnosticism, and the technique may arise from this tradition. Examples of the figure are known from Anglo-Saxon manuscripts.
+
+The technique involves calculating the numerical value of a patient's name, then dividing by 30 or 29, a number derived from the lunar month to find the remainder, which is (mod 29) or (mod 30) in modular arithmetic. The number is then found on the diagram, to determine the prognosis"
 
 Hellenistic and Roman astrology sought to extend its roots far back into Egyptian antiquity by putting forth spurious treatises under the names, not only of Hermes Trismegistus, but also of Nechepso and Petosiris, [^292:3] who were regarded respectively as an Egyptian king and an Egyptian priest who had lived at least seven centuries before Christ.
 
@@ -128,13 +134,17 @@ Only fragments and citations ascribed to Nechepso and Petosiris are now extant. 
 
 ## Manetho 
 
+Manetho (Koinē Greek: Μανέθων Manethōn, gen.: Μανέθωνος) is believed to have been an Egyptian priest from Sebennytos (Coptic: ϫⲉⲙⲛⲟⲩϯ, romanized: džemnouti) who lived in the Ptolemaic Kingdom in the early third century BC, during the Hellenistic period. He authored the _Aegyptiaca_ (History of Egypt) in Greek, a major chronological source for the reigns of the pharaohs of ancient Egypt. It is unclear if he wrote his work during the reign of Ptolemy I Soter or Ptolemy II Philadelphos, but no later than that of Ptolemy III Euergetes. 
+
 Yet another astrological work which claims to be drawn from the secret sacred books and cryptic monuments of ancient Egypt is ascribed to Manetho. It is a compilation in verse of prognostications from the various constellations and is regarded as the work of several writers, of whom the oldest is placed in the reign of Alexander Severus in the third century.  [^293:1] 
 
  [^293:1]: Bouché-Leclercq, L’Astrologie grecque, 1898, p. xiii Axt and Riegler, Manethonis Apotelesmaticorum libri sex, Cologne, 1832. Also edited by Koechly. or Manethonis Apotelesmaticorum qui feruntur libri VI by Manetho.; Dorotheus, of Sidon.; Annubio.; Hermann August Theodor Köchly
  
  ## Orpheus.
+ 
+Orpheus (Ancient Greek: Ὀρφεύς) is a legendary musician, poet, and prophet in ancient Greek religion and myth. Some ancient Greek sources note Orpheus' Thracian origins. According to Tzeztes, his home was the Odrysian city of Bisaltia. The major stories about him are centered on his ability to charm all living things and even stones with his music (the usual scene in Orpheus mosaics), his attempt to retrieve his wife, Eurydice, from the underworld, and his death at the hands of those who could not hear his divine music.
 
-### The _Lithica_ of Orpheus.
+### The Lithica of Orpheus.
 
 Orpheus is another author more cited than preserved by The classical antiquity. Pliny called him the first writer on herbs Orpheus, and suspected him of magic. Ernest Riess affirms that Rohde (_Psyche_, p. 398) 
 
@@ -187,17 +197,19 @@ More stress is laid upon the power of demons and herbs in a description which ha
  [^296:2]: _Confessio S. Cypriani_, in Acta Sanctorum, ed. Bollandists, Sept., VII, 222; L. Preller, Philologus (1846), I, 349ff.; cited by A. B. Cook, _Zeus_, Cambridge, 1914, I, 110-111. The work is treated more fully below in Chapter 18. 
 
 
-## Zooraster.
+## Zoroaster.
 
-### Books ascribed to _Zoroaster_.
+Zoroaster (Greek: Ζωροάστρης Zōroastrēs), also known as Zarathustra (/ˌzærəˈθuːstrə/, (Persian: زرتشت) was an ancient Iranian-speaking spiritual leader and ethical philosopher who taught a spiritual philosophy of self-realization and realization of the Divine. His teachings challenged the existing traditions of the Indo-Iranian religion and later developed into the religion of Mazdayasna or Zoroastrianism. He inaugurated a movement that eventually became the dominant religion in Ancient Persia. He was a native speaker of Old Avestan and lived in the eastern part of the Iranian Plateau, but his exact birthplace is uncertain.
+
+### Books ascribed to Zoroaster.
 
 Cumont states in his _Oriental Religions_ in _Roman Paganism_ that
 
-> "towards the end of the Alexandrine period the books ascribed to the half -mythical masters of the Persian science, _Zoroaster_, Hosthanes and Hystaspes, were translated into Greek, and until the end of paganism those names enjoyed a prodigious authority."  [^296:3] 
+> "towards the end of the Alexandrine period the books ascribed to the half mythical masters of the Persian science, _Zoroaster_, Hosthanes and Hystaspes, were translated into Greek, and until the end of paganism those names enjoyed a prodigious authority."  [^296:3] 
 
  [^296:3]: Franz Cumont, op. cit., Chicago, 191 1, p. 189. See also Windischmann, Zoroastrische Studien, Berlin, 1863. 
 
-Pliny regarded _Zoroaster_ as the founder of magic and we have met other examples of his reputation as a magician. Later we shall find him cited several times in the Byzantine Geoponica which seems to use a book ascribed to him on the sympathy and antipathy existing between natural objects.  [^296:4] 
+Pliny regarded _Zoroaster_ as the founder of magic and we have met other examples of his reputation as a magician. Later we shall find him cited several times in the Byzantine _Geoponica_ which seems to use a book ascribed to him on the sympathy and antipathy existing between natural objects.  [^296:4] 
 
  [^296:4]: See below, Chapter 26. 
 
