--- a/Slak/16.md
+++ b/Slak/16.md
@@ -204,7 +204,7 @@ When Jesus' teacher started to whip him, his hand withered and he died. After wh
 
  [^394:3]: _Evang. Inf. Arab_., cap. 49; _Evang. Thorn. Lat_., 12; 
 
-### Further marvels from the Pseudo- Matthew.
+### Further marvels from the Pseudo Matthew.
 
 As has been indicated in the foot-notes many of the foregoing marvels are recounted in the Pseudo-Matthew and Latin Gospel of Thomas as well as in the Arabic Gospel of the Infancy. The Pseudo-Matthew also tells how lions adored the Christ child and were bade by him to go in peace. [^394:4]  
 
@@ -293,7 +293,7 @@ In the _Acts of Thomas_ the Holy Ghost is called the pitying mother of seven hou
 
 The Acts of John, too, speak of overcoming fire and darkness and angels and demons and archons and powers of darkness who separate man from God. 
 
-### Legend of St. John.
+### Legend of St.John.
 
 We deal in another chapter with the struggle of the apostles with Simon Magus as recounted in the apocryphal Acts of Peter and Paul, and with similar legends of the contests of other apostles with magicians. Here, however, we may mention some of the marvels in the apocryphal legend of St. John, supposed to have been written by his disciple Procharus and 
 
@@ -325,7 +325,7 @@ At any rate Adam of St. Victor in the twelfth century wrote the following lines 
 
  [^398:2]: HL, XV, 42. 
 
-### Legend of St. Sousnyos.
+### Legend of St.Sousnyos.
 
 The brief legend of St. Sousnyos, which Basset has included in his edition of Ethiopian Apocrypha,  [^398:3] is all magic, beginning with an incantation or magic prayer against disease and demons. 
 
