--- a/Slak/17.md
+++ b/Slak/17.md
@@ -7,7 +7,7 @@
 
 > _Recognitions_ I, 13. 
 
-### The _Pseudo-Clementines_
+### The Pseudo Clementines
 
 The starting-point and chief source for this chapter will be the writings known as the _Pseudo-Clementines_ and more particularly the Latin version commonly called _The Recognitions_. We shall then note other accounts of its villainhero, Simon Magus, in patristic literature.  [^400:1] 
 
@@ -563,7 +563,7 @@ But Origen and Tertullian add nothing to the story of Simon Magus himself. Hippo
 But Hippolytus also gives further details concerning Simon's visit to Rome, stating that he there encountered the apostles and was repeatedly opposed by Peter, until finally Simon declared that if he were buried alive he would rise again upon the third day. 
 His disciples buried him, as they were directed, but he never reappeared, "for he was not the Christ."  
 
-### Peter's account in the _Didascalia et Constitutiones Apostolorum_.
+### Peter account in the Didascalia et Constitutiones Apostolorum
  
 Peter himself is represented as briefly recounting his struggle at Rome with Simon Magus in the _Didascalia Apostolorum_, an apocryphal work of probably the third century, extant in Syriac and Latin, and more fully in the parallel passage of the Greek _Constitutiones Apostolorum_, written perhaps about 400 A. D.  [^422:1] 
 
@@ -577,7 +577,6 @@ Peter found Simon at Rome drawing many away from the church as well as seducing 
 In the Syriac and Latin account Peter then states that one day he saw Simon flying through the air. "And standing beneath I said, 'In the virtue of the holy name, Jesus, I cut off your virtues. And so falling he broke the arch (thigh?) of his foot (leg?)."  [^422:3] 
 
  [^422:3]: ...in una die procedens vidi illum per acra volantem et ferebatur. Et subsistens dixi: Un virtute sancti nonuinis Iesu excido virtutes tuas. Et sic ruens femur pedis sui fregit."
-
 
 But he did not die, since Peter goes on to say that while "many then departed from him, others who were worthy of him remained with him." In the longer Greek version Simon announced his flight in the theater. While all eyes were turned on Simon, Peter prayed against him. Meanwhile Simon mounted aloft into mid-air, borne up, Peter says, by demons, and telling the people that he was ascending to heaven, whence he would return bringing them good tidings. The people applauded him as a god, but Peter stretched forth his hands to heaven, supplicating God through the Lord Jesus to dash down the corrupter and curtail the power of the demons. He asked further, however, that Simon might not be killed by his fall but merely bruised. Peter also addressed Simon and the evil powers who were supporting him, requiring that he might fall and become a laughing-stock to those who had been deceived by him. Thereupon Simon fell with a great commotion and bruised his bottom and the soles of his feet. It will be noted that here, as in the accounts by some other authors, Peter alone struggles with Simon Magus, lending color to the T&uuml;bingen theory once suggested in connection with the Pseudo-Clementines, that Simon Magus is meant to represent the apostle Paul. 
 
@@ -641,7 +640,7 @@ A chapter is devoted to Simon Magus in the History of the Jewish War of the so-c
 
  [^426:1]: Hegesippus, III, 2 ed. C. F. Weber and J. Caesar, Marburg, 1864, "et statim in voce Petri implicatiis remigiis alarum quas sumserat corruit, nee exanimatus est, sed fracto debilitatus crure Ariciam concessit atque ibi mortuus est." I earnestly recommend this passage to those who delight in finding ancient precursors of modern inventions as an example of remarkable insight into the effect of air-waves upon delicate mechanisms. 
 
-### A sermon on Simon's fall.
+### A sermon on Simon fall
 
 Finally, passing over other Latin accounts of the contest between the apostles and Simon Magus to be found in the Apostolic Histories of the Pseudo-Abdias   [^426:2] 
 
